Beginnings of the UpdateVehicle form/functionality.

--- a/BolindersBil.Web/Views/Account/Admin.cshtml
+++ b/BolindersBil.Web/Views/Account/Admin.cshtml
@@ -10,7 +10,20 @@
 <div class="container">
     <div class="float-sm-right" style="margin-bottom:10px">
         <a asp-controller="Account" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
-        <a asp-controller="Account" asp-action="AddNewVehicle" class="btn btn-warning" name="updateVehicle" @*disabled="disabled" *@ id="updateVehcle">Update</a>
+
+        @*<form asp-action="Delete" method="post">
+            <a asp-controller="Account"
+               asp-action="EditVehicle"
+               asp-route-vehicleId=""
+               class="btn btn-warning"
+               name="updateVehicle"
+               disabled="disabled"
+               id="updateVehcle">
+                Update
+            </a>
+        </form>*@
+
+
         <button class="btn btn-danger" type="submit" name="deleteVehicle" @*disabled="disabled" *@ id="deleteVehicle">Delete</button>
     </div>
 
@@ -20,6 +33,16 @@
         <table class="table table-bordered table-striped">
             <tr>
                 <td><input type="checkbox" id="checkedBox" value="@v.Id" /> @v.Brand @v.Model, @v.RegNr</td>
+                <td class="text-right">
+                    <form asp-action="Delete" method="post">
+                        <a asp-controller="Account"
+                           asp-action="EditVehicle"
+                           asp-route-vehicleId="@v.Id"
+                           class="btn btn-sm btn-warning">
+                            Update
+                        </a>
+                    </form>
+                </td>
             </tr>
         </table>
     }
