--- a/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
@@ -169,6 +169,7 @@
         <div class="form-group">
             <div class="col-sm-10">
                 <button class="btn btn-primary" type="submit">Add Vehicle</button>
+                <a asp-controller="Account" asp-action="Admin" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
 
