--- a/BolindersBil.Web/Views/Account/EditVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/EditVehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model  Vehicle
+﻿@model  EditVehicleViewModel
 
 @{
     ViewData["Title"] = "Admin - EditVehicle";
@@ -40,19 +40,6 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        <label asp-for="Year" class="control-label col-sm-2"><strong>Årsmodell:</strong></label>
-        <div class="col-sm-10">
-            <select asp-for="Year" class="form-control" id="">
-                <option selected>Välj</option>
-                @foreach (var year in ViewBag.vehicleYearOptions)
-                {
-                    <option value="@year">@year</option>
-                }
-            </select>
-        </div>
-    </div>*@
-
     <div class="form-group">
         <label asp-for="Kilometer" class="control-label col-sm-2"><strong>Kilometer:</strong></label>
         <div class="col-sm-10">
@@ -67,18 +54,19 @@
         </div>
     </div>
 
-    @*<div class="form-group">
+    <div class="form-group">
         <label asp-for="Body" class="control-label col-sm-2"><strong>Karosstyp:</strong></label>
         <div class="col-sm-10">
             <select asp-for="Body" class="form-control" id="">
                 <option selected>Välj</option>
-                @foreach (var bodyType in ViewBag.bodyTypes)
+                <option>@Model.Body</option>
+                @*@foreach (var bodyType in ViewBag.bodyTypes)
                 {
                     <option value="@bodyType">@bodyType</option>
-                }
+                }*@
             </select>
         </div>
-    </div>*@
+    </div>
 
     <div class="form-group">
         <label asp-for="Color" class="control-label col-sm-2"><strong>Färg:</strong></label>
