--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -1,28 +1,68 @@
 ﻿@*<h1>TODO: Navbar!!!</h1>*@
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <div class="text-secondary">BolindersBil</div>
-    </div>
 
-    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/Home">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Vehicles">Vehicles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Contact">Contact</a>
-            </li>
+<meta charset="utf-8" />
 
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <div class="text-secondary">BolindersBil</div>
+        </div>
+
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/Start">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Vehicles">Vehicles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Contact">Contact</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
 
-   
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*<ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li>
+                    @Html.ActionLink("Home", "Index",routeValues: null, htmlAttributes: new { title = "Index" })
+                </li>
+                <li class="divider"></li>
+            </ul>
+        </li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    </ul>*@
 
 
