--- a/BolindersBil.Web/Views/_ViewImports.cshtml
+++ b/BolindersBil.Web/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using NewsAPI.Constants;
 @using System;
 @using BolindersBil.Web.ExtenstionMethods;
+@using Newtonsoft.Json.Linq;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
