--- a/BolindersBil.Web/Views/Account/EditVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/EditVehicle.cshtml
@@ -11,7 +11,7 @@
 <hr />
 
 <form asp-action="EditVehicle" method="post" enctype="multipart/form-data" class="form-horizontal">
-
+    <input type="hidden" value="@Model.Id" id="id" name="id" />
     <div class="form-group">
         <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
         <div class="col-sm-10">
