Added the extra window to make sure that the user really wants to delete a vehicle.

--- a/BolindersBil.Web/Views/Account/Admin.cshtml
+++ b/BolindersBil.Web/Views/Account/Admin.cshtml
@@ -10,12 +10,8 @@
 <div class="container">
     <div class="float-sm-right" style="margin-bottom:10px">
         <a asp-controller="Account" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
-<<<<<<< HEAD
-        <a asp-controller="Account" asp-action="AddNewVehicle" class="btn btn-warning" name="updateVehicle" @*disabled="disabled" *@ id="updateVehcle">Update</a>
-        <form asp-action="DeleteVehicle" method="delete"></form>
-=======
-        <button class="btn btn-danger" type="submit" name="deleteVehicle" @*disabled="disabled" *@ id="deleteVehicle">Delete</button>
->>>>>>> c2b72124697d87140d6aa8a5d94e086566efe48f
+        <a asp-controller="Account" asp-action="EditVehicle" class="btn btn-warning" name="editVehicle" @*disabled="disabled" *@ id="updateVehicle">Update</a>
+        <button type="button" class="btn btn-danger" name="deleteVehicle" id"deleteVehicle" data-toggle="modal" data-target="#deleteModal">Delete</button>
     </div>
 
     @foreach (var v in Model)
@@ -25,13 +21,14 @@
             <tr>
                 <td><input type="checkbox" id="checkedBox" value="@v.Id" /> @v.Brand @v.Model, @v.RegNr</td>
                 <td class="text-right">
-                    <form asp-action="Delete" method="post">
+                    <form asp-action="Delete" method="get">
                         <a asp-controller="Account"
                            asp-action="EditVehicle"
                            asp-route-vehicleId="@v.Id"
                            class="btn btn-sm btn-warning">
                             Update
                         </a>
+                        <input type="hidden" name="vehicleId" value="@v.Id" />
                     </form>
                 </td>
             </tr>
@@ -39,6 +36,7 @@
     }
 </div>
 
+<!-- LogOut-button: -->
 <div class="container" style="margin-bottom:10px">
     <div class="row">
         <div class="col-md-12">
@@ -52,22 +50,48 @@
     </div>
 </div>
 
+<!-- This is the deleteModal to make sure that the user really wants to delete a vehicle? -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-center" id="deleteModalLabel">Are you sure that you want to delete?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p style="text-align:center">You are about to delete a vehicle from the page, are you sure that you want to do that?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                <a asp-controller="Account" asp-action="DeleteVehicle" asp-route-vehicleId="@Model.Id" method="post" class="btn btn-danger" name="deleteVehicle" @*disabled="disabled" *@ id="deleteVehicle">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- Enable/Disable the buttons: -->
 <script>
-    var boxChecker = document.getElementById('checkedBox');
-    var newVehicle = document.getElementById('newVehicle');
-    var updateVehicle = document.getElementById('updateVehicle');
-    var deleteVehicle = document.getElementById('deleteVehicle');
+        //var boxChecker = document.getElementById('checkedBox');
+        //var newVehicle = document.getElementById('newVehicle');
+        //var updateVehicle = document.getElementById('updateVehicle');
+        //var deleteVehicle = document.getElementById('deleteVehicle');
 
-    boxChecker.onchange = function () {
-        if (this.checked) {
-            updateVehicle.disabled = false;
-            deleteVehicle.disabled = false;
-            newButton.disabled = true;
-        } else {
-            updateVehicle.disabled = true;
-            deleteVehicle.disabled = true;
-            newButton.disabled = false;
-        }
-    };
+        //boxChecker.onchange = function () {
+        //    if (this.checked) {
+        //        updateVehicle.disabled = false;
+        //        deleteVehicle.disabled = false;
+        //        newButton.disabled = true;
+        //    } else {
+        //        updateVehicle.disabled = true;
+        //        deleteVehicle.disabled = true;
+        //        newButton.disabled = false;
+        //    }
+        //};
+
+        //$('#deleteModal').on('shown.bs.modal', function () {
+        //    $('#myInput').trigger('focus');
+        //});
 </script>
