--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -1,28 +1,38 @@
 ﻿@*<h1>TODO: Navbar!!!</h1>*@
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />   
 
-<meta charset="utf-8" />
+</head>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-            <div class="text-secondary">BolindersBil</div>
-        </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <div class="text-secondary">BolindersBil</div>
+    </div>
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>        
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/Start">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Vehicle">Vehicles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Contact">Contact</a>
+            </li>
 
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/Start">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Vehicles">Vehicles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Contact">Contact</a>
-                </li>
-
-            </ul>
-        </div>
-    </nav>
+        </ul>
+    </div>
+</nav>
 
 
 
