--- a/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
@@ -124,18 +124,18 @@
         <div class="form-group">
             <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
             <div class="col-sm-10">
-                    <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="true">  Ja</label>
-                    <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="false">  Nej</label>
+                <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="true">  Ja</label>
+                <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="false">  Nej</label>
             </div>
         </div>
 
         @*<div class="form-group">
-            <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
-            <div class="col-sm-10">
-                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
-            </div>
-        </div>*@
+                <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
+                <div class="col-sm-10">
+                    <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
+                    <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
+                </div>
+            </div>*@
 
         <div class="form-group">
             <label asp-for="Office" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
@@ -153,12 +153,13 @@
         @* TODO: fix so you can visually see the files you have uploaded. *@
         <div class="form-group">
             <label asp-for="Picture" class="control-label col-sm-2"><strong>Bilder:</strong></label>
+
             <div class="col-sm-10">
-                <div>
-                    <input asp-for="Picture" type="file" id="files" class="custom-file-input" multiple>
-                    <label class="custom-file-label col-sm-4">Välj fil</label>
-                </div>
+                <label class="custom-file-label col-sm-6">Välj fil</label>
+                <input asp-for="Picture" type="file" id="files" class="custom-file-input" multiple>
+                <input id="btnUploadFile" type="button" value="Upload File"/>
             </div>
+
         </div>
 
         <div class="form-group">
@@ -185,3 +186,4 @@
 
     </form>
 </div>
+
