--- a/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
@@ -11,5 +11,27 @@
         @RenderBody()
     </div>
     <script src="~/js/site.min.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            $("#btnUploadFile").on('click', function () {
+                var data = new FormData();
+                var files = $("#files").get(0).files;
+                // Adding the uploaded image content to the form data collection (data variable).
+                if (files.length > 0) {
+                    data.append("UploadedImage", files[0]);
+                }
+                var ajaxRequest = $.ajax({
+                    type: "Post",
+                    url: "Account/AddNewVehicle",
+                    contentType: false,
+                    processData: false,
+                    data: data
+                });
+                ajaxRequest.done(function () { });
+            });
+
+        });
+    </script>
 </body>
 </html>
