--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -27,18 +27,16 @@
 
         @*Detta är search men behövs kontrollera efter vi är klara med vehicles view*@
         <form asp-controller="Vehicle" asp-action="Search" method="post">
-            <input name="searchString" placeholder="T.ex. Volvo (C30)" />            
+            <input name="searchString" class="col-md-3" placeholder="T.ex. Volvo (C30)" />            
             <button type="submit">Sök</button>
             <div class="input-group-prepend">
                 <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">
+                    <input type="radio" name="Used">New Car<br>
                 </div>
-            </div>
-            <div class="input-group-prepend">
                 <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">
+                    <input type="radio" name="Used">Used Car<br>
                 </div>
-            </div>
+            </div>           
         </form>
 
 
