--- a/BolindersBil.Web/Views/Account/Admin.cshtml
+++ b/BolindersBil.Web/Views/Account/Admin.cshtml
@@ -18,7 +18,7 @@
             <!-- The layout for all the vehicles presented on the Admin-page: -->
             <table class="table table-bordered table-striped">
                 <tr>
-                    <td><input type="checkbox" name="ID" value="@v.Id" class="custom-checkbox" chkCheckBoxId/> @v.Brand @v.Model, @v.RegNr</td>
+                    <td><input type="checkbox" value="@v.Id" /> @v.Brand @v.Model, @v.RegNr</td>
                 </tr>
             </table>
         }
