Downloaded: NuGetPackage System.Drawing.Common. Added: Code to be able to take the uploaded image entered by the user and resize the image to one of size 80.  Saves the original image and the resized image in the Solution under the wwwroot folder images.

--- a/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
@@ -158,7 +158,7 @@
                 <div class="col-md-4">
 
                     <div class="btn">
-                        <input asp-for="Picture" type="file" id="browseImages" class="form-control-file" multiple>
+                        <input asp-for="Picture" type="file" name="uploadedImage" id="browseImages" class="form-control-file" multiple>
                     </div>
 
 
