--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -39,40 +39,7 @@
             </div>           
         </form>
 
-
-
-
-
-        <div class="row">
-
-
-
-            @*Search form*@
-            @*<form asp-action="GetVehicles" method="get">
-                    <div id="SearchBar">
-                        <div class="input-group mb-3" style="margin: 2em">
-                            <div class="input-group-prepend">
-                                <input type="text" class="form-control" placeholder="T.ex. Volvo (C30)">
-                            </div>
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <input type="checkbox" aria-label="Checkbox for following text input">
-                                </div>
-                            </div>
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">
-                                    <input type="checkbox" aria-label="Checkbox for following text input">
-                                </div>
-                            </div>
-                            <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
-                        </div>
-                    </div>
-                </form>*@
-
-        </div>
-
-
-
+        @*Logos*@
         <div class="container">
 
             <div class="row" style="">
@@ -103,7 +70,7 @@
         </div>
 
 
-
+        @*More logos*@
         <div class="container">
 
             <div class="row" style="">
@@ -132,10 +99,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
 
         @*Newsfeed*@
         <div class="col">
@@ -187,9 +150,6 @@
         </div>
 
     </div>
-
-
-
 </body>
 </html>
 
