Fixed so that I can come into the vehicle Index

--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -16,7 +16,7 @@
 <body>
     <p>This is the Vehicle Index page!</p>
 
-    @foreach (var item in Model)
+    @*@foreach (var item in Model)
     {
 
         if (item.Used)
@@ -40,7 +40,7 @@
 
         }
 
-    }
+    }*@
 
 
 </body>
