--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -28,7 +28,7 @@
 
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Vehicle">Vehicles</a>
+                <a asp-action="Vehicles" class="nav-link">Vehicles</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Contact">Contact</a>
