--- a/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
+++ b/BolindersBil.Web/Views/Shared/_AdminLayout.cshtml
@@ -11,6 +11,6 @@
         @RenderBody()
     </div>
     <script src="~/js/site.min.js"></script>
-    <script src="~/js/adminDelete.js"></script>
+    <script src="~/js/vehicleDelete.js"></script>
 </body>
 </html>
