--- a/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Account/AddNewVehicle.cshtml
@@ -152,16 +152,12 @@
 
         @* TODO: fix so you can visually see the files you have uploaded. *@
         <div class="form-group">
-            <label asp-for="Picture" class="control-label col-sm-2"><strong>Bilder:</strong></label>
-            @*<div class="col-md-9">*@
-
+            <label asp-for="Images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
             <div class="col-sm-4">
 
                 <div class="btn">
-                    <input asp-for="Picture" type="file" name="uploadedImage" id="browseImages" class="form-control-file" multiple>
+                    <input asp-for="Images" type="file" name="uploadedImages" id="browseImages" class="form-control-file" multiple>
                 </div>
-
-                <div class="dropzone"></div>
 
                 <div id="imgPreview" class="img-thumbnail" style="display:none;">
                     <img class="img-responsive" id="targetImg" style="height:100px; width:100%;" />
@@ -172,12 +168,10 @@
                     </div>
                 </div>
 
-
             </div>
 
 
             @*<input asp-for="Picture" type="file" id="browseImages" class="form-control-file" multiple>*@
-            @*</div>*@
         </div>
 
         <div class="form-group">
@@ -206,48 +200,48 @@
 </div>
 
 <script src="~/js/site.min.js"></script>
-<script src="~/js/dropzone.js"></script>
 <script>
-    $(document).ready(function () {
 
-        $("#browseImages").change(function () {
-            var File = this.files;
+        $(document).ready(function () {
 
-            for (var i = 0; i != File.length; i++) {
-                //ReadImage[i];
-                if (File && File[i]) {
-                    ReadImage(File[i]);
+            $("#browseImages").change(function () {
+                var File = this.files;
+
+                for (var i = 0; i != File.length; i++) {
+                    //ReadImage[i];
+                    if (File && File[i]) {
+                        ReadImage(File[i]);
+                    }
+                }
+
+                //if (File && File[0]) {
+                //    ReadImage(File[0]);
+                //}
+            });
+        });
+
+        var ReadImage = function (file) {
+            var reader = new FileReader;
+            var image = new Image;
+            reader.readAsDataURL(file);
+            reader.onload = function (_file) {
+                image.src = _file.target.result;
+                image.onload = function () {
+                    var height = this.height;
+                    var width = this.width;
+                    var type = file.type;
+                    // Changing the image from byte to kilobyte here.
+                    var size = ~~(file.size / 1024) + "KB";
+                    $("#targetImg").attr('src', _file.target.result);
+                    $("#description").text("Size: " + size + ", " + height + " x " + width + ", " + type + "");
+                    $("#imgPreview").show();
                 }
             }
+        };
 
-            //if (File && File[0]) {
-            //    ReadImage(File[0]);
-            //}
-        });
-    });
-
-    var ReadImage = function (file) {
-        var reader = new FileReader;
-        var image = new Image;
-        reader.readAsDataURL(file);
-        reader.onload = function (_file) {
-            image.src = _file.target.result;
-            image.onload = function () {
-                var height = this.height;
-                var width = this.width;
-                var type = file.type;
-                // Changing the image from byte to kilobyte here.
-                var size = ~~(file.size / 1024) + "KB";
-                $("#targetImg").attr('src', _file.target.result);
-                $("#description").text("Size: " + size + ", " + height + " x " + width + ", " + type + "");
-                $("#imgPreview").show();
-            }
-        }
-    };
-
-    var ClearPreview = function () {
-        $("#browseImages").val('');
-        $("#description").text('');
-        $("#imgPreview").hide();
-    };
+        var ClearPreview = function () {
+            $("#browseImages").val('');
+            $("#description").text('');
+            $("#imgPreview").hide();
+        };
 </script>
