--- a/BolindersBil.Web/Views/_ViewImports.cshtml
+++ b/BolindersBil.Web/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 @using Newtonsoft.Json.Linq;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper BolindersBil.Web.Infrastructure.*, BolindersBil.Web
