Transferred all code from AccountController to VehicleController that needs to be there.

--- a/BolindersBil.Web/Views/Vehicle/Index.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Index.cshtml
@@ -2,9 +2,8 @@
 
 @{
     Layout = null;
-    
-}
 
+}
 
 <!DOCTYPE html>
 
@@ -21,25 +20,20 @@
 
         if (item.Used)
         {
-
-        
-
-         <div class="col-md-4">
-            <div class="thumbnail">
-            <img src="@item.Picture" data-holder-rendered="true" style="height: 150px; width: 50%; display: block;">
-            <div class="caption">
-                <h3 id="thumbnail-label">@item.Model</h3>
-                <p>@item.Price</p>
-                <p>@item.Brand</p>
-                <p>@item.Color</p>
-                <p>@item.Gearbox</p>
-                <p>@item.Used</p>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="~/Logo/Ford-logo-2003-1366x768.png" data-holder-rendered="true" style="height: 150px; width: 50%; display: block;">
+                    <div class="caption">
+                        <h3 id="thumbnail-label">@item.Model</h3>
+                        <p>@item.Price</p>
+                        <p>@item.Brand</p>
+                        <p>@item.Color</p>
+                        <p>@item.Gearbox</p>
+                        <p>@item.Used</p>
+                    </div>
+                </div>
             </div>
-           </div>
-          </div>
-
         }
-
     }
 
 
